tests/spec/emit/snapshots/generic_enum_with_variant_field.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum MyResult<T> { Success(T), Failure }
  
  fn test() -> MyResult<int> {
    MyResult.Success(42)
  }
---
package main

func MakeMyResultSuccess[T any](arg0 T) MyResult[T] {
	return MyResult[T]{Tag: MyResultSuccess, Success: arg0}
}

func MakeMyResultFailure[T any]() MyResult[T] {
	return MyResult[T]{Tag: MyResultFailure}
}

type MyResultTag uint8

const (
	MyResultSuccess MyResultTag = iota
	MyResultFailure
)

type MyResult[T any] struct {
	Tag     MyResultTag
	Success T
}

func test() MyResult[int] {
	return MakeMyResultSuccess(42)
}
