tests/spec/emit/snapshots/generic_fn_explicit_unknown_type_arg.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn foo<T>(args: T) -> T {
    args
  }
  
  fn test() {
    let result = foo<Unknown>("Lilian")
  }
---
package main

func foo[T any](args T) T {
	return args
}

func test() {
	foo[any]("Lilian")
}
