tests/spec/emit/snapshots/generic_function_two_params.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn first<A, B>(a: A, b: B) -> A {
    a
  }
  
  fn test() -> int {
    first(10, true)
  }
---
package main

func first[A any, B any](a A, _ B) A {
	return a
}

func test() int {
	return first(10, true)
}
