tests/spec/emit/snapshots/generic_function_with_map_key_type_parameter.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn put_in_map<K: Comparable, V>(key: K, value: V) -> Map<K, V> {
    let mut m: mut Map<K, V> = Map.new()
    m[key] = value
    m
  }
---
package main

func putInMap[K comparable, V any](key K, value V) map[K]V {
	m := make(map[K]V)
	m[key] = value
	return m
}
