tests/spec/emit/snapshots/generic_interface_constraint_with_type_args.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Mapper<A, B> {
    fn map_value(a: A) -> B
  }
  
  fn apply_mapper<M: Mapper<int, string>>(m: M, val: int) -> string {
    m.map_value(val)
  }
---
package main

type Mapper[A any, B any] interface {
	mapValue(A) B
}

func applyMapper[M Mapper[int, string]](m M, val int) string {
	return m.mapValue(val)
}
